[package]
name = "shower"
version = "0.1.0"
edition = "2021"
authors = ["Ken <kenakioreed@gmail.com>"]
license = "MIT"
repository = "https://github.com/tiby312/shower"
description = "get string of code block"
keywords = ["source-code", "source","code"]
readme = "README.md"
include = ["src/**/*", "LICENSE-MIT", "README.md"]


[lib]
proc-macro = true

[dependencies]
quote = "1.0.29"
syn = {version="2.0.22" ,features=["full"]}
unindent = "0.2.1"
